# OpenSubdiv

./: .gitignore  CMakeLists.txt  cootocsr.cpp  mmtospy.py  objToHeader.py
benchmark/: .gitignore  Makefile  bench.py  common.gpi  divider.gpi  divider.py  fps.gpi  fps.py  matrixtime.gpi  matrixtime.py  mem.gpi  mem.py  mmtocdf.py  mmtodist.py  mmtospy.py  perf.gpi  perf.py  prefetch.h  relative.gpi  relative.py  reorder.py  sparsity.gpi  sparsity.py  spy.py  stability.gpi  stability.py  stream.gpi  stream.py  synth.py  ttff.gpi  ttff.py  tune.py
benchmark/graphs/: mem.eps  mem.tex  perf.eps  perf.tex  perf_BigGuy.eps  perf_BigGuy.tex  perf_Bunny.eps  perf_Bunny.tex  perf_Cube.eps  perf_Cube.tex  perf_Icosahedron.eps  perf_Icosahedron.tex  perf_MonsterFrog.eps  perf_MonsterFrog.tex  perf_Venus.eps  perf_Venus.tex  relative_BigGuy.eps  relative_Bunny.eps  relative_Cube.eps  relative_Icosahedron.eps  sparsity.eps  sparsity.tex  stream_BigGuy.eps  stream_Bunny.eps  stream_Cube.eps  stream_Icosahedron.eps  ttff_BigGuy.eps  ttff_BigGuy.tex  ttff_Bunny.eps  ttff_Bunny.tex  ttff_Cube.eps  ttff_Cube.tex  ttff_Icosahedron.eps  ttff_Icosahedron.tex  ttff_MonsterFrog.eps  ttff_MonsterFrog.tex  ttff_Venus.eps  ttff_Venus.tex
cmake/: FindGLEW.cmake  FindGLUT.cmake  FindMKL.cmake  FindOSKI.cmake  FindOpenCCL.cmake  FindPOSKI.cmake
documentation/: AddingANewSpMVDispatcher.txt
examples/: CMakeLists.txt
examples/glutViewer/: CMakeLists.txt  viewer.cpp  viewer_compat.cpp
examples/headlessViewer/: CMakeLists.txt  viewer.cpp
examples/ptexViewer/: CMakeLists.txt  viewer.cpp
opensubdiv/far/: bilinearSubdivisionTables.h  catmarkSubdivisionTables.h  dispatcher.h  loopSubdivisionTables.h  mesh.h  meshFactory.h  subdivisionTables.h  vertexEditTables.h
opensubdiv/hbr/: vertex.h
(+57 files in other folders)
